--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 services:
   php:
-    build: './php'
+    image: gitlab.dylanwilson.dev:5050/dylan/minersrealm-panel/php:v1.0
     networks:
       - backend
     volumes:
       - "./php/application.php:/var/www/html/protected/config/internal/application.php"
   apache:
-    build: './apache'
+    image: gitlab.dylanwilson.dev:5050/dylan/minersrealm-panel/apache:v1.0
     depends_on:
       - php
     networks:
