Fix error Jinja variable 'str object' has no attribute 'host'
Attempting to deploy php/application.php.dist in Salt results in the
following error: Unable to manage file: Jinja variable 'str object' has
no attribute 'host'.

This was caused by the php/application.php.dist expecting the Multicraft
SMTP information to be available though pillars.  This file has been
updated to instead use the vault.read_secret module to get the data from
Vault directly.

--- a/php/application.php.dist
+++ b/php/application.php.dist
@@ -141,7 +141,7 @@ return array(
             'class'=>'ext.yii-mail.YiiMail',
             'logging'=>false,
             'transportType'=>'php',
-            // {%- set multicraft_smtp = salt['pillar.get']('multicraft:smtp') %}
+            // {%- set multicraft_smtp = salt['vault.read_secret']('salt/data/web/secrets/panel.minersrealm.net/smtp') %}
             // uncomment the following to use an SMTP server for sending emails
             'transportType'=>'smtp',
             'transportOptions'=>array(
