Fix HTTP 403 (Forbidden) errors
Currently, the Apache server attempts to use port 9000 on the php
container for handling PHP files and loads all other files from
/var/www/html - however, /var/www/html does not exist in the Apache
container.  This results in the error: Forbidden - You don't have
permission to access this resource.

The web files from the php container should be shared with the apache
container, mounted at /var/www/html. A volume called www-data will now
be mounted on the php container and then mounted on the apache container
at /var/www/html. This allows both the containers to access these files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
-version: "3.8"
+version: '3.8'
 services:
   php:
     image: gitlab.dylanwilson.dev:5050/dylan/minersrealm-panel/php:v1.0
     networks:
       - backend
+    ports:
+      - 9000:9000
     volumes:
-      - "./php/application.php:/var/www/html/protected/config/internal/application.php"
+      - www-data:/var/www/html
+      - ./php/application.php:/var/www/html/protected/config/internal/application.php
+
   apache:
     image: gitlab.dylanwilson.dev:5050/dylan/minersrealm-panel/apache:v1.0
     depends_on:
@@ -14,8 +18,13 @@ services:
       - frontend
       - backend
     ports:
-      - "33935:80"
+      - 33935:80
+    volumes:
+      - www-data:/var/www/html
 
 networks:
   frontend:
   backend:
+
+volumes:
+  www-data:
